# drone-connect

./: pyproject.toml
drone_connect/: client_cloud_config.json5  drone-communicator-tcp.py  drone-communicator.py  drone-connect-zenoh.py  drone-connect.py  drone-mavlink-zenoh.py  read_log.py  read_tlog.py  test-socket.py  test_haress_platform_namespace.py
sitl-docker/: Dockerfile  docker-compose.yml  drone-communicator.py  entrypoint.sh  supervisord.conf  zenoh_subscriber.py  zenohd-compose.yml
sitl-docker/test/: Dockerfile  Dockerfile-from-ardupilot-git  entrypoint.sh
